# simplesemantics

./: .gitignore  README.md  pyproject.toml  readme.md  test.json
examples/: simple.py
simplesemantics/: __init__.py  docstore.py  document.py  metrics.py
sssdb/: __init__.py  docstore.py  pinecone.py
sssdb/wrappers/: __init__.py  openai_wrapper.py  splade_wrapper.py
tests/: test_sample.py
