[tool.poetry]
name = "simplesemantics"
version = "0.1.0"
description = "A simple in-memory vector search"
authors = ["Chris Hua <hua.christopher@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
