[tool.poetry]
name = "sssdb"
version = "0.1.0"
description = "A simple in-memory vector search"
authors = ["Chris Hua <hua.christopher@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"


[tool.poetry.group.all.dependencies]
sentence-transformers = "^2.2.2"
splade = {git = "https://github.com/naver/splade.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
